--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource/abel": "^4.5.0",
+    "@fontsource/abhaya-libre": "^4.5.0",
+    "@fontsource/alegreya-sans": "^4.5.0",
+    "@fontsource/arsenal": "^4.5.0",
     "@fontsource/roboto": "^4.5.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
