--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/abhaya-libre": "^4.5.0",
     "@fontsource/alegreya-sans": "^4.5.0",
     "@fontsource/arsenal": "^4.5.0",
+    "@fontsource/asap": "^4.5.0",
     "@fontsource/roboto": "^4.5.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
